--- a/conda/recipes/cudf/meta.yaml
+++ b/conda/recipes/cudf/meta.yaml
@@ -14,7 +14,7 @@ source:
 
 build:
   number: {{ GIT_DESCRIBE_NUMBER }}
-  string: cuda_{{ cuda_version }}_py{{ py_version }}_{{ GIT_DESCRIBE_HASH }}_{{ GIT_DESCRIBE_NUMBER }}
+  string: cuda_{{ cuda_version }}_l4t_py{{ py_version }}_{{ GIT_DESCRIBE_HASH }}_{{ GIT_DESCRIBE_NUMBER }}
   script_env:
     - VERSION_SUFFIX
     - PARALLEL_LEVEL
@@ -30,10 +30,9 @@ requirements:
     - setuptools
     - numba >=0.53.1
     - dlpack>=0.5,<0.6.0a0
-    - pyarrow 4.0.1 *cuda
+    - pyarrow 4.0.1 *cuda_l4t
     - libcudf {{ version }}
     - rmm {{ minor_version }}
-    - cudatoolkit {{ cuda_version }}
   run:
     - protobuf
     - python
@@ -42,18 +41,14 @@ requirements:
     - cupy >7.1.0,<10.0.0a0
     - numba >=0.53.1
     - numpy
-    - {{ pin_compatible('pyarrow', max_pin='x.x.x') }} *cuda
+    - {{ pin_compatible('pyarrow', max_pin='x.x.x') }} *cuda_l4t
     - fastavro >=0.22.0
     - {{ pin_compatible('rmm', max_pin='x.x') }}
     - fsspec>=0.6.0
-    - {{ pin_compatible('cudatoolkit', max_pin='x.x') }}
-    - nvtx >=0.2.1
     - packaging
     - cachetools
 
 test:
-  requires:
-    - cudatoolkit {{ cuda_version }}.*
   imports:
     - cudf
 
