--- a/conda/recipes/cudf/meta.yaml
+++ b/conda/recipes/cudf/meta.yaml
@@ -6,7 +6,7 @@
 {% set cuda_version='.'.join(environ.get('CUDA', '10.1').split('.')[:2]) %}
 
 package:
-  name: cudf
+  name: cudf-l4t
   version: {{ version }}
 
 source:
@@ -30,30 +30,26 @@ requirements:
     - setuptools
     - numba >=0.53.1
     - dlpack>=0.5,<0.6.0a0
-    - pyarrow 4.0.1 *cuda
-    - libcudf {{ version }}
-    - rmm {{ minor_version }}
-    - cudatoolkit {{ cuda_version }}
+    - pyarrow 4.0.1 *cuda_l4t
+    - libcudf-l4t {{ version }}
+    - rmm-l4t {{ minor_version }}
   run:
     - protobuf
     - python
     - typing_extensions
     - pandas >=1.0,<1.3.0dev0
-    - cupy >7.1.0,<10.0.0a0
+    - cupy-l4t >7.1.0
     - numba >=0.53.1
     - numpy
-    - {{ pin_compatible('pyarrow', max_pin='x.x.x') }} *cuda
+    - {{ pin_compatible('pyarrow', max_pin='x.x.x') }} *cuda_l4t
     - fastavro >=0.22.0
-    - {{ pin_compatible('rmm', max_pin='x.x') }}
+    - {{ pin_compatible('rmm-l4t', max_pin='x.x') }}
     - fsspec>=0.6.0
-    - {{ pin_compatible('cudatoolkit', max_pin='x.x') }}
     - nvtx >=0.2.1
     - packaging
     - cachetools
 
 test:
-  requires:
-    - cudatoolkit {{ cuda_version }}.*
   imports:
     - cudf
 
