--- a/conda/recipes/cudf_kafka/meta.yaml
+++ b/conda/recipes/cudf_kafka/meta.yaml
@@ -6,7 +6,7 @@
 {% set cuda_version='.'.join(environ.get('CUDA', '10.1').split('.')[:2]) %}
 
 package:
-  name: cudf_kafka
+  name: cudf_kafka_l4t
   version: {{ version }}
 
 source:
@@ -29,16 +29,14 @@ requirements:
     - python
     - cython >=0.29,<0.30
     - setuptools
-    - cudf {{ version }}
-    - libcudf_kafka {{ version }}
+    - cudf-l4t {{ version }}
+    - libcudf_kafka_l4t {{ version }}
   run:
-    - libcudf_kafka {{ version }}
+    - libcudf_kafka_l4t {{ version }}
     - python-confluent-kafka
-    - cudf {{ version }}
+    - cudf-l4t {{ version }}
 
 test:
-  requires:
-    - cudatoolkit {{ cuda_version }}.*
   imports:
     - cudf_kafka
 
