--- a/conda/recipes/custreamz/meta.yaml
+++ b/conda/recipes/custreamz/meta.yaml
@@ -6,7 +6,7 @@
 {% set cuda_version='.'.join(environ.get('CUDA', '10.1').split('.')[:2]) %}
 
 package:
-  name: custreamz
+  name: custreamz-l4t
   version: {{ version }}
 
 source:
@@ -26,19 +26,17 @@ requirements:
   host:
     - python
     - python-confluent-kafka
-    - cudf_kafka {{ version }}
+    - cudf_kafka_l4t {{ version }}
   run:
     - python
     - streamz 
-    - cudf {{ version }}
+    - cudf-l4t {{ version }}
     - dask>=2021.6.0,<=2021.07.1
     - distributed>=2021.6.0,<=2021.07.1
     - python-confluent-kafka
-    - cudf_kafka {{ version }}
+    - cudf_kafka_l4t {{ version }}
 
 test:
-  requires:
-    - cudatoolkit {{ cuda_version }}.*
   imports:
     - custreamz
 
