--- a/conda/recipes/libcudf_kafka/meta.yaml
+++ b/conda/recipes/libcudf_kafka/meta.yaml
@@ -4,7 +4,7 @@
 {% set minor_version =  version.split('.')[0] + '.' + version.split('.')[1] %}
 
 package:
-  name: libcudf_kafka
+  name: libcudf_kafka_l4t
   version: {{ version }}
 
 source:
@@ -25,7 +25,7 @@ requirements:
   build:
     - cmake >=3.20.1
   host:
-    - libcudf {{version}}
+    - libcudf-l4t {{version}}
     - librdkafka >=1.6.0,<1.7.0a0
   run:
     - {{ pin_compatible('librdkafka', max_pin='x.x') }} #TODO: librdkafka should be automatically included here by run_exports but is not
